Thu Mar 08 02:52:26 GMT 2007  Olly Betts <olly@survex.com>

	* include/xapian/types.h: Rewritten, with more accurate documentation
	  comments.  Add constant Xapian::BAD_VALUENO which is -1 cast to
	  Xapian::valueno.
	* api/omenquire.cc,include/xapian/enquire.h,matcher/multimatch.cc: Use
	  Xapian::BAD_VALUENO instead of Xapian::valueno(-1).

Thu Mar 08 01:47:08 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Try putting apidoc/html in EXTRA_DIST instead of
	  using dist-hook.

Wed Mar 07 23:16:52 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Stop shipping docs/apidoc/latex/* in the
	  xapian-core tarballs since it's just useless bloat.  Removing it
	  more than halves the size of the tarball (55% reduction!)

Wed Mar 07 22:07:31 GMT 2007  Olly Betts <olly@survex.com>

	* tests/runtest.in: If we aren't using valgrind, turn on
	  MALLOC_CHECK_ and MALLOC_PERTURB_ for glibc.

Wed Mar 07 20:02:31 GMT 2007  Olly Betts <olly@survex.com>

	* INSTALL: CVS -> SVN.

Wed Mar 07 20:00:37 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Define _FORTIFY_SOURCE in config.h if GCC is in use
	  and it's not already set.  That way the user can easily override.
	* INSTALL: Document this.

Wed Mar 07 19:53:15 GMT 2007  Olly Betts <olly@survex.com>

	* INSTALL: Remove reference to muscat36 backend.

Wed Mar 07 17:37:07 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac: Note GCC and glibc versions needed for _FORTIFY_SOURCE
	  support.

Wed Mar 07 16:29:02 GMT 2007  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Increase the length allowed for the filename
	  in an error message, as it was being truncated which makes for a
	  confusing error message and stops editors jumping to the line with
	  the error in.

Wed Mar 07 15:57:15 GMT 2007  Olly Betts <olly@survex.com>

	* common/Makefile.mk: Ship common/msvc_posix_wrapper.h and
	  common/msvc_posix_wrapper.cc.

Wed Mar 07 10:01:31 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
